# body-throwing-movement

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: cli.rs  error.rs  lib.rs  main.rs
src/output/: mod.rs  plot.rs  table.rs
src/physics/: ballistics.rs  mod.rs
tests/: cli.rs
